# spata

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  LICENSE.txt  README.md  README.rst  SECURITY.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt
docs/reference/: card.rst  data_card.rst  model_card.rst
spata/: __init__.py
spata/base/: __init__.py  card.py  plots.py  plotter.py
spata/data/: __init__.py
spata/model/: __init__.py
