[project]
name = "spata"
description = "SPATA"
dynamic = [ "version" ]
license = { file = "LICENSE.txt" }
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "João Vitorino", email = "jpmvo@outlook.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [ "numpy>=2.0.2,<3" ]

[project.urls]
"Homepage" = "https://github.com/vitorinojoao/spata"
"Documentation" = "https://spata.readthedocs.io/en/latest/"

[build-system]
requires = [ "flit_core>=3.2,<4" ]
build-backend = "flit_core.buildapi"
