[project]
name = "spata"
description = "SPATA"
dynamic = [ "version" ]
authors = [
    { name = "João Vitorino", email = "jpmvo@outlook.com" },
]
license = "MIT"
license-files = [ "LICENSE.txt" ]
readme = { file = "README.rst", content-type = "text/x-rst" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Adaptive Technologies",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [ "numpy>=2.0.2,<3" ]

[project.optional-dependencies]
plots = [ "matplotlib>=3.7.5,<4" ]
jobs = ["joblib>=1.4.2,<2" ]

[project.urls]
"Homepage" = "https://github.com/vitorinojoao/spata"
"Documentation" = "https://spata.readthedocs.io/en/latest/"

[build-system]
requires = [ "flit_core>=3.2,<4" ]
build-backend = "flit_core.buildapi"
